<resources>
    <string name="app_name">ProjectTyro</string>
    <string name="groups">Groups</string>
    <string name="car_sharing">Car Sharing</string>
    <string name="car_sharingAnswer">Yes/No</string>
    <string name="home">Home</string>
    <string name="no">No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="add_interest">Add Interest</string>
    <string name="enter_postcode">Enter Postcode</string>
    <string name="find_nearby_colleagues">Find nearby colleagues</string>
    <string name="other_users">Other Users</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_to_tyro">New To Tyro</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="job_title">Job Title</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="interests">Interests</string>
    <string name="interestsBody">Interests will appear here</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="hide">Hide</string>
    <string name="title_activity_profile">Profile activity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="first_fragment_label">First Fragment Label</string>
    <string name="second_fragment_label">Second Fragment Label</string>
    <string name="yes">Yes</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_interest_popup">Interest Popup</string>
    <string name="title_activity_interest_tag">Interest Tag Users</string>
    <string name="title_activity_login_page">Login Page</string>
    <string name="connectionsTitle">CONNECTIONS</string>string>
    <string name="noOfConnections">12</string>
    <string name="title_activity_other_user_profile">OtherUserProfile</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>string>
    <string name="connect">Connect</string>
    <string name="search_hint">Search</string>string>
    <string name="title_activity_connection_requests">ConnectionRequests</string>string>
    <string name="connectionRequestsTitle">Connection Requests</string>
    <string name="title_activity_car_sharing">Car Sharing</string>
    <string name="title_activity_recommended_connections">RecommendedConnections</string>
    <string name="recommendedConnectionsTitle">Recommended Connections</string>
</resources>
