<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profileName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="#00AEEF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
        android:layout_width="362dp"
        android:layout_height="40dp"
        android:layout_marginTop="208dp"
        android:autofillHints=""
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />

    <Button
        android:id="@+id/editProfile4"
        android:layout_width="197dp"
        android:layout_height="45dp"
        android:layout_marginTop="256dp"
        android:background="@drawable/edit_text_border"
        android:ellipsize="none"
        android:fontFamily="sans-serif"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>